[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "config>=0.5.1",
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]

[tool.uv.workspace]
members = ["project"]
